--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(WinAgent)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(WinAgent main.cpp)
+add_executable(WinAgent agent/agent.cpp
+        agent/detectionMethods/detectionMethod.cpp
+        agent/detectionMethods/detectionMethod.hpp
+)
