put ProcessInfo in common

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(WinAgent agent/agent.cpp
         agent/configFileSyner/configFile.hpp
         agent/configFileSyner/syncer.cpp
         agent/configFileSyner/syncer.hpp
+        agent/common/processInfo.hpp
 )
