--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,17 @@
 cmake_minimum_required(VERSION 3.31)
 project(WinAgent)
 
+include(FetchContent)
+
 set(CMAKE_CXX_STANDARD 20)
+
+FetchContent_Declare(
+        spdlog
+        GIT_REPOSITORY https://github.com/gabime/spdlog.git
+        GIT_TAG v1.15.0
+)
+
+FetchContent_MakeAvailable(spdlog)
 
 add_executable(WinAgent agent/agent.cpp
         agent/detectionMethods/detectionMethod.cpp
@@ -19,5 +29,5 @@ add_executable(WinAgent agent/agent.cpp
         agent/logger/logger.hpp
 )
 
-target_link_libraries(WinAgent bcrypt)
+target_link_libraries(WinAgent bcrypt spdlog)
 
